--- a/ConfigService/pom.xml
+++ b/ConfigService/pom.xml
@@ -41,9 +41,14 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.2.0-RC1</version>
         </dependency>
-
+    <dependency>
+        <groupId>com.netflix.eureka</groupId>
+        <artifactId>eureka-client</artifactId>
+        <version>2.0.4</version>
+    </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
