--- a/Eureka-discoveryService/src/main/resources/application.properties
+++ b/Eureka-discoveryService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Eureka-discoveryService
 server.port=8761
-eureka.client.fetch-registry=false
-eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
