--- a/ProduitService/src/main/resources/application.properties
+++ b/ProduitService/src/main/resources/application.properties
@@ -6,8 +6,24 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/produit-db
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer Configurations
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.listener.missing-topics-fatal=false
+
+
+# Consumer Configurations
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=group1
+
 
 # Hibernate (JPA) Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
