--- a/RecommendationService/src/main/resources/application.properties
+++ b/RecommendationService/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate (JPA) Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
