--- a/ConfigService/src/main/resources/application.properties
+++ b/ConfigService/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.application.name=ConfigService
 server.port=8090
 management.endpoints.web.exposure.include=*
 spring.cloud.config.server.git.uri=https://github.com/jk7nl4/e-commerce
-spring.cloud.config.server.git.password=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
+spring.cloud.config.server.git.username=jk7nl4
+
+spring.cloud.config.server.git.password=SECRET_KEY=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
 spring.cloud.config.server.git.default-label=master
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.enabled=true
